qtplasmac: refactor button interlocking

--- a/share/qtvcp/screens/qtplasmac/qtplasmac.ui
+++ b/share/qtvcp/screens/qtplasmac/qtplasmac.ui
@@ -2143,6 +2143,9 @@ EDGE</string>
                     </property>
                     <item>
                      <widget class="QPushButton" name="run">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -2171,6 +2174,9 @@ EDGE</string>
                     </item>
                     <item>
                      <widget class="ActionButton" name="pause_resume">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -2366,6 +2372,9 @@ EDGE</string>
                     </item>
                     <item>
                      <widget class="QPushButton" name="abort">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -2751,6 +2760,9 @@ EDGE</string>
                    </property>
                    <item row="5" column="1">
                     <widget class="QPushButton" name="button_10">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -2773,6 +2785,9 @@ EDGE</string>
                    </item>
                    <item row="9" column="1">
                     <widget class="QPushButton" name="button_18">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -2795,6 +2810,9 @@ EDGE</string>
                    </item>
                    <item row="4" column="1">
                     <widget class="QPushButton" name="button_8">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -2823,6 +2841,9 @@ EDGE</string>
                    </item>
                    <item row="4" column="0">
                     <widget class="QPushButton" name="button_7">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -2851,6 +2872,9 @@ EDGE</string>
                    </item>
                    <item row="5" column="0">
                     <widget class="QPushButton" name="button_9">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -2873,6 +2897,9 @@ EDGE</string>
                    </item>
                    <item row="6" column="1">
                     <widget class="QPushButton" name="button_12">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -2895,6 +2922,9 @@ EDGE</string>
                    </item>
                    <item row="7" column="1">
                     <widget class="QPushButton" name="button_14">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -2917,6 +2947,9 @@ EDGE</string>
                    </item>
                    <item row="7" column="0">
                     <widget class="QPushButton" name="button_13">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -2939,6 +2972,9 @@ EDGE</string>
                    </item>
                    <item row="9" column="0">
                     <widget class="QPushButton" name="button_17">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -2961,6 +2997,9 @@ EDGE</string>
                    </item>
                    <item row="2" column="1">
                     <widget class="QPushButton" name="button_4">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -2989,6 +3028,9 @@ EDGE</string>
                    </item>
                    <item row="3" column="0">
                     <widget class="QPushButton" name="button_5">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -3039,6 +3081,9 @@ EDGE</string>
                    </item>
                    <item row="8" column="1">
                     <widget class="QPushButton" name="button_16">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -3061,6 +3106,9 @@ EDGE</string>
                    </item>
                    <item row="6" column="0">
                     <widget class="QPushButton" name="button_11">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -3083,6 +3131,9 @@ EDGE</string>
                    </item>
                    <item row="1" column="1">
                     <widget class="QPushButton" name="button_2">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -3111,6 +3162,9 @@ EDGE</string>
                    </item>
                    <item row="1" column="0">
                     <widget class="QPushButton" name="button_1">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -3139,6 +3193,9 @@ EDGE</string>
                    </item>
                    <item row="8" column="0">
                     <widget class="QPushButton" name="button_15">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -3161,6 +3218,9 @@ EDGE</string>
                    </item>
                    <item row="3" column="1">
                     <widget class="QPushButton" name="button_6">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -3211,6 +3271,9 @@ EDGE</string>
                    </item>
                    <item row="2" column="0">
                     <widget class="QPushButton" name="button_3">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
                        <horstretch>0</horstretch>
@@ -3239,6 +3302,9 @@ EDGE</string>
                    </item>
                    <item row="10" column="0">
                     <widget class="QPushButton" name="button_19">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -3261,6 +3327,9 @@ EDGE</string>
                    </item>
                    <item row="10" column="1">
                     <widget class="QPushButton" name="button_20">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="minimumSize">
                       <size>
                        <width>60</width>
@@ -5438,6 +5507,9 @@ EDGE</string>
                   </property>
                   <item>
                    <widget class="QFrame" name="jog_frame">
+                    <property name="enabled">
+                     <bool>false</bool>
+                    </property>
                     <property name="frameShape">
                      <enum>QFrame::NoFrame</enum>
                     </property>
@@ -7318,6 +7390,9 @@ MOVE</string>
                        </property>
                        <item>
                         <widget class="SystemToolButton" name="wcs_button">
+                         <property name="enabled">
+                          <bool>false</bool>
+                         </property>
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                            <horstretch>0</horstretch>
@@ -7362,6 +7437,9 @@ MOVE</string>
                        </item>
                        <item>
                         <widget class="PushButton" name="camera">
+                         <property name="enabled">
+                          <bool>false</bool>
+                         </property>
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                            <horstretch>0</horstretch>
@@ -7390,6 +7468,9 @@ MOVE</string>
                        </item>
                        <item>
                         <widget class="PushButton" name="laser">
+                         <property name="enabled">
+                          <bool>false</bool>
+                         </property>
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                            <horstretch>0</horstretch>
@@ -15200,6 +15281,9 @@ HOME ALL</string>
                  </item>
                  <item row="3" column="4">
                   <widget class="QCheckBox" name="chk_override_limits">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
                    <property name="sizePolicy">
                     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                      <horstretch>0</horstretch>
@@ -15238,6 +15322,9 @@ HOME ALL</string>
                  </item>
                  <item row="4" column="4">
                   <widget class="QCheckBox" name="chk_override_jog">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
                    <property name="focusPolicy">
                     <enum>Qt::ClickFocus</enum>
                    </property>
@@ -15864,7 +15951,7 @@ HOME ALL</string>
                       <x>0</x>
                       <y>0</y>
                       <width>720</width>
-                      <height>687</height>
+                      <height>693</height>
                      </rect>
                     </property>
                     <property name="sizePolicy">
