--- a/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3.ui
+++ b/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3.ui
@@ -1404,6 +1404,9 @@
                        </property>
                        <item>
                         <widget class="SystemToolButton" name="wcs_button">
+                         <property name="enabled">
+                          <bool>false</bool>
+                         </property>
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                            <horstretch>0</horstretch>
@@ -1448,6 +1451,9 @@
                        </item>
                        <item>
                         <widget class="PushButton" name="camera">
+                         <property name="enabled">
+                          <bool>false</bool>
+                         </property>
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                            <horstretch>0</horstretch>
@@ -1476,6 +1482,9 @@
                        </item>
                        <item>
                         <widget class="PushButton" name="laser">
+                         <property name="enabled">
+                          <bool>false</bool>
+                         </property>
                          <property name="sizePolicy">
                           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                            <horstretch>0</horstretch>
@@ -2609,6 +2618,9 @@ HOME ALL</string>
                     </property>
                     <item>
                      <widget class="QPushButton" name="run">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -2637,6 +2649,9 @@ HOME ALL</string>
                     </item>
                     <item>
                      <widget class="ActionButton" name="pause_resume">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -2832,6 +2847,9 @@ HOME ALL</string>
                     </item>
                     <item>
                      <widget class="QPushButton" name="abort">
+                      <property name="enabled">
+                       <bool>false</bool>
+                      </property>
                       <property name="sizePolicy">
                        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
                         <horstretch>0</horstretch>
@@ -3208,6 +3226,9 @@ HOME ALL</string>
                    </property>
                    <item row="4" column="0">
                     <widget class="QPushButton" name="button_7">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3236,6 +3257,9 @@ HOME ALL</string>
                    </item>
                    <item row="3" column="0">
                     <widget class="QPushButton" name="button_5">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3289,6 +3313,9 @@ HOME ALL</string>
                    </item>
                    <item row="2" column="0">
                     <widget class="QPushButton" name="button_3">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3317,6 +3344,9 @@ HOME ALL</string>
                    </item>
                    <item row="8" column="1">
                     <widget class="QPushButton" name="button_16">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3345,6 +3375,9 @@ HOME ALL</string>
                    </item>
                    <item row="5" column="1">
                     <widget class="QPushButton" name="button_10">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3373,6 +3406,9 @@ HOME ALL</string>
                    </item>
                    <item row="1" column="1">
                     <widget class="QPushButton" name="button_2">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3401,6 +3437,9 @@ HOME ALL</string>
                    </item>
                    <item row="2" column="1">
                     <widget class="QPushButton" name="button_4">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3429,6 +3468,9 @@ HOME ALL</string>
                    </item>
                    <item row="5" column="0">
                     <widget class="QPushButton" name="button_9">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3457,6 +3499,9 @@ HOME ALL</string>
                    </item>
                    <item row="7" column="1">
                     <widget class="QPushButton" name="button_14">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3485,6 +3530,9 @@ HOME ALL</string>
                    </item>
                    <item row="6" column="1">
                     <widget class="QPushButton" name="button_12">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3513,6 +3561,9 @@ HOME ALL</string>
                    </item>
                    <item row="1" column="0">
                     <widget class="QPushButton" name="button_1">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3541,6 +3592,9 @@ HOME ALL</string>
                    </item>
                    <item row="4" column="1">
                     <widget class="QPushButton" name="button_8">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3569,6 +3623,9 @@ HOME ALL</string>
                    </item>
                    <item row="9" column="0">
                     <widget class="QPushButton" name="button_17">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3597,6 +3654,9 @@ HOME ALL</string>
                    </item>
                    <item row="8" column="0">
                     <widget class="QPushButton" name="button_15">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3650,6 +3710,9 @@ HOME ALL</string>
                    </item>
                    <item row="9" column="1">
                     <widget class="QPushButton" name="button_18">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3678,6 +3741,9 @@ HOME ALL</string>
                    </item>
                    <item row="3" column="1">
                     <widget class="QPushButton" name="button_6">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3706,6 +3772,9 @@ HOME ALL</string>
                    </item>
                    <item row="6" column="0">
                     <widget class="QPushButton" name="button_11">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3734,6 +3803,9 @@ HOME ALL</string>
                    </item>
                    <item row="7" column="0">
                     <widget class="QPushButton" name="button_13">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3762,6 +3834,9 @@ HOME ALL</string>
                    </item>
                    <item row="10" column="0">
                     <widget class="QPushButton" name="button_19">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -3790,6 +3865,9 @@ HOME ALL</string>
                    </item>
                    <item row="10" column="1">
                     <widget class="QPushButton" name="button_20">
+                     <property name="enabled">
+                      <bool>false</bool>
+                     </property>
                      <property name="sizePolicy">
                       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                        <horstretch>0</horstretch>
@@ -15275,6 +15353,9 @@ ANTI DIVE</string>
                  </item>
                  <item row="2" column="4">
                   <widget class="QCheckBox" name="chk_override_limits">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
                    <property name="sizePolicy">
                     <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                      <horstretch>0</horstretch>
@@ -15345,6 +15426,9 @@ ANTI DIVE</string>
                  </item>
                  <item row="3" column="4">
                   <widget class="QCheckBox" name="chk_override_jog">
+                   <property name="enabled">
+                    <bool>false</bool>
+                   </property>
                    <property name="focusPolicy">
                     <enum>Qt::ClickFocus</enum>
                    </property>
